Fix step-by-step on Firefox

--- a/app/assets/sass/navody.digital/_step-by-step-navigation.scss
+++ b/app/assets/sass/navody.digital/_step-by-step-navigation.scss
@@ -18,7 +18,7 @@
   display: none;
 }
 
-.app-step-nav__step--active .js-step-title-text > a {
+.app-step-nav__step--active .js-step-title > a {
   color: govuk-colour("black");
   text-decoration: none;
 }
